more windows fixes